# voxel_world

./: Cargo.toml  README.md
resources/shaders/: shader.wgsl
src/: app.rs  lib.rs  main.rs
src/game/: camera.rs  chunk.rs  mod.rs  player.rs  raycast.rs  world.rs
src/input/: camera_controller.rs  player_controller.rs
src/rendering/: chunk_renderer.rs  geometry_renderer.rs  gpu_context.rs  mesh.rs  mod.rs  projection.rs  shared_resources.rs  texture.rs  texture_atlas.rs
src/ui/: debug_ui.rs  mod.rs
src/ui/panels/: mod.rs  player_info.rs
