[package]
name = "voxel_world"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.3"
bytemuck = {  version = "1.24.0", features = [ "derive" ] }
cgmath = "0.18.0"
noise = "0.9.0"
egui = "0.33.0"
egui-winit = "0.33.0"
egui-wgpu = "0.33.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
